--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div>
-                    <button class="btn btn-green px-5 py-3">
+                    <button class="btn btn-green px-5 py-3 shadow">
                         Find House
                     </button>
                 </div>
