--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="pl-124">
         <img src="assets/images/bg-header.svg" alt="bg-header" class="img-header">
         <div class="row" id="header">
             <div class="col-md-6">
@@ -82,7 +82,7 @@
             </div>
             <div class="col-md-6 my-auto">
                 <div class="row p-4 section scrolling-wrapper flex-row flex-nowrap">
-                    <div class="col-6 p-3 place mx-3">
+                    <div class="col-6 p-3 place mr-6">
                         <img src="assets/images/place.png" alt="img-place" class="img-fluid">
                         <h5>
                             Tretes Hotel INA
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 p-3 place mx-3">
+                    <div class="col-6 p-3 place">
                         <img src="assets/images/place-2.png" alt="img-place" class="img-fluid">
                         <h5>
                             Hotel Mawar & Melati Putih
