--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div>
-                    <button class="btn btn-green px-5 py-3 shadow">
+                    <button class="btn btn-blue px-5 py-3 shadow">
                         Find House
                     </button>
                 </div>
@@ -131,32 +131,23 @@
 
     <div class="explore">
         <div class="container">
-            <div class="row">
-                <div class="col-md-7">
-                    <div class="row">
-                        <img src="assets/images/image-head.png" alt="" class="img-fluid px-2">
-                    </div>
-                    <div class="row mt-4 image-content">
-                        <div class="col-4">
-                            <img src="assets/images/image-content-1.png" alt="content-1" class="img-fluid">
-                        </div>
-                        <div class="col-4">
-                            <img src="assets/images/image-content-2.png" alt="content-2" class="img-fluid">
-                        </div>
-                        <div class="col-4">
-                            <img src="assets/images/image-content-3.png" alt="content-3" class="img-fluid">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5 text-content title pt-35">
+            <div class="row text-content title pt-35">
+                <div class="col-md-9 px-md-0">
                     <h1 class="pb-3">
                         Explore our promos
                     </h1>
-                    <p>
-                        Blandit <span class="cl-green">1,900</span> natoque dui justo, dictum turpis amet, viverra vel ornare quis mattis mi ac eget id integer dolor dui aliquam volutpat varius pulvinar massa
+                    <p class="pb-0">
+                        Blandit <span class="cl-blue">1,900</span> natoque dui justo, dictum turpis amet, viverra vel ornare quis mattis <br> mi ac eget id integer dolor dui aliquam volutpat varius pulvinar massa
                     </p>
-                    <button class="btn btn-green px-5 py-3 mt-0">Learn More</button>
                 </div>
+                <div class="col-md-3 mt-md-3">
+                    <button class="btn btn-blue px-5 py-3 mt-0">Learn More</button>
+                </div>
+            </div>
+            <div class="row section scrolling-wrapper flex-row flex-nowrap mt-3 img-explore mx-2">
+                    <img src="assets/images/image-1.jpeg" alt="image-1" class="img-fluid">
+                    <img src="assets/images/image-2.jpeg" alt="image-2" class="img-fluid">
+                    <img src="assets/images/image-3.jpeg" alt="image-3" class="img-fluid">
             </div>
         </div>
     </div>
