--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     </div>
 
     <div class="explore">
-        <div class="container">
-            <div class="row text-content title pt-35">
+        <div class="pl-24">
+            <div class="row text-content title pt-35 my-0" id="header">
                 <div class="col-md-9 px-md-0">
                     <h1 class="pb-3">
                         Explore our promos
