--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="pl-124">
-        <img src="assets/images/bg-header.svg" alt="bg-header" class="img-header">
+        <img src="assets/images/bg-header.svg" alt="bg-header" class="img-header d-none d-md-block">
         <div class="row" id="header">
             <div class="col-md-6">
                 <div class="title">
