--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         Find Your Next Home Stay
                     </h1>
                 </div>
-                <div class="row stat">
-                    <div class="col-3 text-left">
+                <div class="d-flex flex-row justify-content-between stat mr-5">
+                    <div class="col text-left">
                         <h2>
                             37
                         </h2>
@@ -52,7 +52,7 @@
                             Homestays
                         </p>
                     </div>
-                    <div class="col-3 text-center border-left border-right">
+                    <div class="col text-center border-left border-right">
                         <h2>
                             80
                         </h2>
@@ -60,7 +60,7 @@
                             Partners
                         </p>
                     </div>
-                    <div class="col-3 text-right">
+                    <div class="col text-right">
                         <h2>
                             760
                         </h2>
@@ -137,7 +137,7 @@
                         Explore our promos
                     </h1>
                     <p class="pb-0">
-                        Blandit <span class="cl-blue">1,900</span> natoque dui justo, dictum turpis amet, viverra vel ornare quis mattis <br> mi ac eget id integer dolor dui aliquam volutpat varius pulvinar massa
+                        Blandit <span class="cl-blue">1,900</span> natoque dui justo, dictum turpis amet, viverra vel ornare quis mattis mi ac eget id integer dolor dui aliquam volutpat varius pulvinar massa
                     </p>
                 </div>
                 <div class="col-md-3 mt-md-3">
