--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </div>
             <div class="col-md-6 my-auto">
                 <div class="row p-4 section scrolling-wrapper flex-row flex-nowrap">
-                    <div class="col-6 p-3 place mr-6">
-                        <img src="assets/images/place.png" alt="img-place" class="img-fluid">
+                    <div class="col-md-8 col-12 p-3 place mr-6">
+                        <img src="assets/images/place.png" alt="img-place" class="img-fluid img-place-header">
                         <h5>
                             Tretes Hotel INA
                         </h5>
@@ -96,19 +96,19 @@
                                     Start from <strong>40 USD</strong>
                                 </p>
                             </div>
-                            <div class="col-4 cl-orange">
+                            <div class="col-4 cl-orange text-right">
                                 <strong>
                                     <img src="assets/images/star-yellow.svg" alt="star" class="img-fluid"> 4.8
                                 </strong>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 p-3 place">
-                        <img src="assets/images/place-2.png" alt="img-place" class="img-fluid">
+                    <div class="col-md-8 col-12 p-3 place">
+                        <img src="assets/images/place-2.png" alt="img-place" class="img-fluid img-place-header">
                         <h5>
                             Hotel Mawar & Melati Putih
                         </h5>
-                        <p class="mb-4">
+                        <p class="mb-5">
                             120m
                         </p>
                         <div class="row">
@@ -117,7 +117,7 @@
                                     Start from <strong>40 USD</strong>
                                 </p>
                             </div>
-                            <div class="col-4 cl-orange">
+                            <div class="col-4 cl-orange text-right">
                                 <strong>
                                     <img src="assets/images/star-yellow.svg" alt="star" class="img-fluid"> 4.8
                                 </strong>
