--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style/main.css">
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-                <a class="navbar-brand" href="#">
-                    <h5 class="m-0">House</h5>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link active border-bottom" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item d-flex justify-content-center">
-                            <a class="nav-link" href="#">Partner</a>
-                        </li> 
-                        <li class="nav-item d-flex justify-content-center">
-                            <a class="nav-link" href="#">Recommendation</a>
-                        </li> 
-                    </ul>
-                </div>
+            <a class="navbar-brand" href="#">
+                <h5 class="m-0">House</h5>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link active border-bottom" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item d-flex justify-content-center">
+                        <a class="nav-link" href="#">Partner</a>
+                    </li>
+                    <li class="nav-item d-flex justify-content-center">
+                        <a class="nav-link" href="#">Recommendation</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -71,7 +75,8 @@
                 </div>
                 <div class="stat">
                     <p>
-                        Consectetur odio amet risus ut mattis sed tempor, sed luctus consequat in pellentesque neque nec auctor eu mi mauris, sapien aliquam duis eget id morbi auctor ac tellus ut
+                        Consectetur odio amet risus ut mattis sed tempor, sed luctus consequat in pellentesque neque nec
+                        auctor eu mi mauris, sapien aliquam duis eget id morbi auctor ac tellus ut
                     </p>
                 </div>
                 <div>
@@ -137,7 +142,8 @@
                         Explore our promos
                     </h1>
                     <p class="pb-0">
-                        Blandit <span class="cl-blue">1,900</span> natoque dui justo, dictum turpis amet, viverra vel ornare quis mattis mi ac eget id integer dolor dui aliquam volutpat varius pulvinar massa
+                        Blandit <span class="cl-blue">1,900</span> natoque dui justo, dictum turpis amet, viverra vel
+                        ornare quis mattis mi ac eget id integer dolor dui aliquam volutpat varius pulvinar massa
                     </p>
                 </div>
                 <div class="col-md-3 mt-md-3">
@@ -145,14 +151,213 @@
                 </div>
             </div>
             <div class="row section scrolling-wrapper flex-row flex-nowrap mt-3 img-explore mx-2">
-                    <img src="assets/images/image-1.jpeg" alt="image-1" class="img-fluid">
-                    <img src="assets/images/image-2.jpeg" alt="image-2" class="img-fluid">
-                    <img src="assets/images/image-3.jpeg" alt="image-3" class="img-fluid">
+                <img src="assets/images/image-1.jpeg" alt="image-1" class="img-fluid">
+                <img src="assets/images/image-2.jpeg" alt="image-2" class="img-fluid">
+                <img src="assets/images/image-3.jpeg" alt="image-3" class="img-fluid">
             </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <div class="choose">
+        <div class="container pb-4 px-4">
+            <div class="row text-center d-block pt-5 pb-md-4">
+                <h1 class="my-3">
+                    Why choose us
+                </h1>
+                <p>
+                    House is commited to helping its clients to reach their goals.
+                </p>
+            </div>
+            <div class="row py-5">
+                <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
+                    <img src="assets/images/taxes.svg" alt="taxes" class="img-fluid">
+                    <img src="assets/images/taxes-color.svg" alt="taxes" class="img-fluid" style="display: none;">
+                    <p class="font-weight-bold mt-4 mb-1 cl-blue">
+                        Tax Advantage
+                    </p>
+                    <p class="mb-0">
+                        Tax advantage which applies to certain accounts or investments.
+                    </p>
+                </div>
+                <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
+                    <img src="assets/images/user.svg" alt="user" class="img-fluid">
+                    <img src="assets/images/user-color.svg" alt="user" class="img-fluid" style="display: none;">
+                    <p class="font-weight-bold mt-4 mb-1 cl-blue">
+                        Property Insurance
+                    </p>
+                    <p class="mb-0">
+                        A series of policies that offer either property protection of liability coverage.
+                    </p>
+                </div>
+                <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
+                    <img src="assets/images/discount.svg" alt="discount" class="img-fluid">
+                    <img src="assets/images/discount-color.svg" alt="user" class="img-fluid" style="display: none;">
+                    <p class="font-weight-bold mt-4 mb-1 cl-blue">
+                        Lowest Commision
+                    </p>
+                    <p class="mb-0">
+                        No longer have to negatiate commissions and haggle with other agents.
+                    </p>
+                </div>
+                <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
+                    <img src="assets/images/calendar.svg" alt="calendar" class="img-fluid">
+                    <img src="assets/images/calendar-color.svg" alt="user" class="img-fluid" style="display: none;">
+                    <p class="font-weight-bold mt-4 mb-1 cl-blue">
+                        House Now
+                    </p>
+                    <p class="mb-0">
+                        Easy booking system for a host. Try our innovative model.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="testimoni">
+        <img src="assets/images/testimonial-photo-bg.png" alt="bg-testimoni" class="img-testimoni d-none d-md-block">
+        <div class="container px-4">
+            <div class="row pb-md-4">
+                <h1>
+                    Here is what our clients are saying about us
+                </h1>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-6 p-0">
+                    <div class="row mx-1 mb-4">
+                        <img src="assets/images/star-yellow.svg" alt="star" class="mr-2">
+                        <img src="assets/images/star-yellow.svg" alt="star" class="mr-2">
+                        <img src="assets/images/star-yellow.svg" alt="star" class="mr-2">
+                        <img src="assets/images/star-yellow.svg" alt="star" class="mr-2">
+                        <img src="assets/images/star-yellow.svg" alt="star" class="mr-2">
+                    </div>
+                    <p class="testi-text pb-md-4">
+                        “Great way to make the first market value estmate and then to
+                        select an experienced active broker in the local area for a more
+                        in-depth study. Professional and personalised advice, while
+                        avoiding going through the big brokers who charge fees that are
+                        too much.”
+                    </p>
+                    <div class="row my-5 pl-3">
+                        <img src="assets/images/testimonial-user.png" alt="testi-user" class="img-fluid">
+                        <div class="my-auto ml-4">
+                            <h3 class="font-weight-bold">
+                                Laurent Dominic
+                            </h3>
+                            <p class="m-0 font-weight-semi-bold cl-dusty-grey">
+                                Founder of Blank Company
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card p-4" style="width: 20.25rem;">
+                        <img src="assets/images/place.png" alt="img-place" class="img-fluid img-place-header">
+                        <h3 class="mt-4 font-weight-bold">
+                            Hotel Tentrem
+                        </h3>
+                        <p class="mb-5">
+                            150m
+                        </p>
+                        <div class="row">
+                            <div class="col-8">
+                                <p class="cl-black">
+                                    Start from <strong>40 USD</strong>
+                                </p>
+                            </div>
+                            <div class="col-4 cl-orange text-right">
+                                <strong>
+                                    <img src="assets/images/star-yellow.svg" alt="star" class="img-fluid"> 4.8
+                                </strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="page-footer font-small blue py-5 text-white">
+        <div class="container-fluid text-md-left">
+            <div class="row">
+                <div class="col-md-5 mt-md-0 mt-3">
+                    <h3 class="font-weight-bold mb-4">House</h3>
+                    <p class="mb-2">
+                        Dago, Bandung
+                    </p>
+                    <p>
+                        +62 822 0932 3824
+                    </p>
+                </div>
+                <hr class="clearfix w-100 d-md-none pb-3">
+                <div class="row col-md-7">
+                    <div class="col-md-4 col-sm-6 mb-md-0 mb-3">
+                        <p class="text-white font-weight-bold mb-4">
+                            Partners
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Government agency</a>
+                            </li>
+                            <li>
+                                <a href="#!">Private company</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 col-sm-6 mb-md-0 mb-3">
+                        <p class="text-white font-weight-bold mb-4">
+                            Recommendation
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Homestays</a>
+                            </li>
+                            <li>
+                                <a href="#!">Villas</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 col-sm-6 mb-md-0 mb-3">
+                        <p class="text-white font-weight-bold mb-4">
+                            About Us
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Blog</a>
+                            </li>
+                            <li>
+                                <a href="#!">Career</a>
+                            </li>
+                            <li>
+                                <a href="#!">Our values</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+    <script>
+        function coloringgoals(x) {
+            x.classList.add('bg-white');
+            x.classList.add('rounded-24');
+            x.childNodes[1].style.display = "none";
+            x.childNodes[3].style.display = "block";
+        }
+
+        function normalgoals(x) {
+            x.classList.remove('bg-white');
+            x.classList.remove('rounded-24');
+            x.childNodes[1].style.display = "block";
+            x.childNodes[3].style.display = "none";
+        }
+    </script>
 </body>
+
 </html>
