--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="pl-house">
         <img src="assets/images/bg-header.svg" alt="bg-header" class="img-header d-none d-md-block">
-        <div class="row" id="header">
+        <div class="row mx-0" id="header">
             <div class="col-xl-6">
                 <div class="title">
                     <h1>
