--- a/index.html
+++ b/index.html
@@ -255,9 +255,11 @@
                         avoiding going through the big brokers who charge fees that are
                         too much.”
                     </p>
-                    <div class="row my-5 pl-3">
-                        <img src="assets/images/testimonial-user.png" alt="testi-user" class="img-fluid">
-                        <div class="my-auto ml-4">
+                    <div class="row my-5 pl-3 mx-0">
+                        <div class="col-2 px-0">
+                            <img src="assets/images/testimonial-user.png" alt="testi-user" class="img-fluid">
+                        </div>
+                        <div class="col-10 pl-4 my-auto">
                             <h3 class="font-weight-bold">
                                 Laurent Dominic
                             </h3>
