--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="col-xl-6 my-auto">
-                <div class="gallery row p-4 section scrolling-wrapper flex-row flex-nowrap">
+                <div class="gallery row p-md-4 section scrolling-wrapper flex-row flex-nowrap">
                     <!-- CARD 1 -->
                     <div class="card-hotel-carousel">
                         <div class="image-placeholder">
